--- a/LibraryTestingLink/TestingDynamicLinkLib/AgentGuesswork/AgentGuesswork.vcxproj
+++ b/LibraryTestingLink/TestingDynamicLinkLib/AgentGuesswork/AgentGuesswork.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{5dbc36bd-082b-431d-9d61-94964280d528}</ProjectGuid>
     <RootNamespace>AgentGuesswork</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>M_Math</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
